@@ -1,10 +1,10 @@
 /*! \mainpage RPM API Documentation.
  */
-/** \defgroup	rpmcli	RPMCLI.
- */
 /** \defgroup	python	PYTHON API.
  */
 /** \defgroup	py_c  	PYTHON-C Language Bindings.
+ */
+/** \defgroup	rpmcli	RPMCLI.
  */
 /** \defgroup	rpmbuild	RPMBUILD.
  */
@@ -12,11 +12,13 @@
  */
 /** \defgroup	rpmts	Transaction Set API.
  */
-/** \defgroup	rpmte	Transaction set Element API.
+/** \defgroup	rpmte	Transaction Element API.
  */
 /** \defgroup	rpmds	Dependency Set API.
  */
-/** \defgroup	rpmfi	File Info set API.
+/** \defgroup	rpmfi	File Info API.
+ */
+/** \defgroup	rpmgi	Generalized Iterator API.
  */
 /** \defgroup	lead	LEAD.
  */
@@ -26,75 +28,17 @@
  */
 /** \defgroup	payload	PAYLOAD.
  */
-/** \defgroup	rpmdb	RPM database API.
+/** \defgroup	rpmdb	Database API.
  */
-/** \defgroup	dbi	DataBase Index element API.
+/** \defgroup	dbi	DataBase Index Element API.
  */
 /** \defgroup	db3	Berkeley DB API.
+ */
+/** \defgroup	rpmlua	Embedded Lua.
  */
 /** \defgroup	rpmrpc	RPMRPC.
  */
 /** \defgroup	rpmio	RPMIO.
  */
 /** \defgroup	popt	POPT.
- */
-/*! \defgroup	ES_m	Entropy sources
- */
-/*! \defgroup	ES_audio_m	Entropy sources: /dev/audio
- */
-/*! \defgroup	ES_dsp_m	Entropy sources: /dev/dsp
- */
-/*! \defgroup	ES_random_m	Entropy sources: /dev/random
- */
-/*! \defgroup	ES_urandom_m	Entropy sources: /dev/urandom
- */
-/*! \defgroup	ES_tty_m	Entropy sources: /dev/tty
- */
-/*! \defgroup	PRNG_m	Pseudo-Random Number Generators
- */
-/*! \defgroup	PRNG_fips186_m	Pseudo-Random Number Generators: FIPS-186
- */
-/*! \defgroup   PRNG_mt_m       Pseudo-Random Number Generators: Mersenne Twister
- */
-/*! \defgroup	HASH_m	Hash Functions
- */
-/*! \defgroup	HASH_md5_m	Hash Functions: MD5
- */
-/*! \defgroup	HASH_sha1_m	Hash Functions: SHA-1
- */
-/*! \defgroup	HASH_sha256_m	Hash Functions: SHA-256
- */
-/*! \defgroup	HMAC_m	Keyed Hash Functions, a.k.a. Message Authentication Codes
- */
-/*! \defgroup	HMAC_md5_m	Keyed Hash Functions: HMAC-MD5
- */
-/*! \defgroup	HMAC_sha1_m	Keyed Hash Functions: HMAC-SHA-1
- */
-/*! \defgroup	HMAC_sha256_m	Keyed Hash Functions: HMAC-SHA-256
- */
-/*! \defgroup	BC_m	Block ciphers
- */
-/*! \defgroup	BC_aes_m	Block ciphers: AES
- */
-/*! \defgroup	BC_blowfish_m	Block ciphers: Blowfish
- */
-/*! \defgroup   MP_m    Multiple Precision Integer Arithmetic
- */
-/*! \defgroup	DL_m	Discrete Logarithm Primitives
- */
-/*! \defgroup   DL_dh_m Discrete Logarithm Primitives: Diffie-Hellman
- */
-/*! \defgroup   DL_dsa_m        Discrete Logarithm Primitives: DSA
- */
-/*! \defgroup   DL_elgamal_m    Discrete Logarithm Primitives: ElGamal
- */
-/*! \defgroup   IF_m    Integer Factorization Primitives
- */
-/*! \defgroup   IF_rsa_m        Integer Factorization Primitives: RSA
- */
-/*! \defgroup	JAVA_m	Java API
- */
-/*! \defgroup   UNIT_m  Unit tests
- */
-/*! \defgroup   BENCH_m Benchmark tests
  */
